# wav2vec-speech-to-text

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  wsgi.py
.github/workflows/: ci.yaml
app/: cli.py  serve.py
src/wav2vec_speech_to_text/config/: config.py  hparams.yaml
src/wav2vec_speech_to_text/data/: contants.py  loader.py  splitter.py
src/wav2vec_speech_to_text/model/: cnn.py  transformer.py  wav2vec.py
src/wav2vec_speech_to_text/train/: predict.py  test.py  trainer.py
src/wav2vec_speech_to_text/utils/: logger.py  metrics.py  model_state.py  preprocess.py
tests/: test_dataloader.py  test_model.py
